# hello-ncurses

./: 00-00_box.c  00-00_ncurses_version.c  01-01_goodbye.c  01-02_goodbye-final.c  02-01_skeleton.c  02-02_add.c  02-03_add.c  02-04_add.c  02-05_yoda.c  02-06_typewriter.c  02-07_yourname.c  02-08_sushi.c  03-01_twinkle.c  03-02_annoy.c  03-03_colortest.c  03-04_yellowred.c  03-05_colorful.c  03-06_pink.c  03-07_bgcolor1.c  03-08_bgcolor2.c  03-09_notice.c  04-01_charattrib.c  04-02_changechar.c  04-03_attrtest.c  04-04_pi.c  04-05_acslist.c  04-06_acsstring.c  04-07_abox.c  04-08_chtypestring.c  04-09_addchstr.c  04-10_boxarray.c  04-11_unicode.c  04-12_ustring.c  05-01_screensize.c  05-02_stdscrsize.c  05-03_corners.c  05-04_ctitle.c  05-05_whereami.c  06-01_text1.c  06-02_text2.c  (+67 more)
src/chapter00/: 00_00_box.cpp  00_01_ncurses_version.cpp  CMakeLists.txt
src/chapter01/: 01_01_goodbye.cpp  01_02_goodbye_final.cpp  CMakeLists.txt
src/chapter02/: 02_01_skeleton.cpp  02_02_add.cpp  02_03_add.cpp  02_04_add.cpp  02_05_yoda.cpp  02_06_typewriter.cpp  02_07_yourname.cpp  02_08_sushi.cpp  CMakeLists.txt
src/chapter03/: 03_01_twinkle.cpp  03_02_annoy.cpp  03_03_colortest.cpp  03_04_yellowred.cpp  03_05_colorful.cpp  03_06_pink.cpp  03_07_bgcolor1.cpp  03_08_bgcolor2.cpp  03_09_notice.cpp  CMakeLists.txt
src/chapter04/: 04_01_charattrib.cpp  04_02_changechar.cpp  04_03_attrtest.cpp  04_04_pi.cpp  04_05_acslist.cpp  04_06_acsstring.cpp  04_07_abox.cpp  04_08_chtypestring.cpp  04_09_addchstr.cpp  04_10_boxarray.cpp  04_11_unicode.cpp  04_12_ustring.cpp  CMakeLists.txt
src/chapter05/: 05_01_screensize.cpp  05_02_stdscrsize.cpp  05_03_corners.cpp  05_04_ctitle.cpp  05_05_whereami.cpp  CMakeLists.txt
src/chapter06/: 06_01_text1.cpp  06_02_text2.cpp  06_03_text3.cpp  06_04_text4.cpp  06_05_marquee1.cpp  06_06_marquee2.cpp  06_07_text5.cpp  06_08_text6.cpp  06_09_text7.cpp  06_10_cat.cpp  06_11_insdel.cpp  CMakeLists.txt
src/chapter07/: 07_01_cls.cpp  07_02_clearline.cpp  07_03_clearbot.cpp  CMakeLists.txt
src/chapter08/: 08_01_yourname.cpp  08_02_keywait1.cpp  08_03_keywait2.cpp  08_04_secretkey.cpp  08_05_kbhit.cpp  08_06_arrowkeys.cpp  08_07_greetings.cpp  08_08_urpwd.cpp  08_09_flush.cpp  CMakeLists.txt
src/chapter09/: 09_01_anotherwin.cpp  09_02_switch.cpp  09_03_switchback.cpp  09_04_touch.cpp  09_05_halfpint.cpp  09_06_quad.cpp  09_07_twowin.cpp  09_08_border.cpp  09_09_aborder.cpp  09_10_box.cpp  09_11_quadborders.cpp  CMakeLists.txt
src/chapter10/: 10_01_sub1.cpp  10_02_sub2.cpp  10_03_sub3.cpp  10_04_subsub.cpp  10_05_delsub.cpp  CMakeLists.txt
src/chapter11/: 11_01_overwrite1.cpp  11_02_overwrite2.cpp  11_03_overlay.cpp  11_04_copywin.cpp  11_05_clobber.cpp  11_06_dup.cpp  11_07_movewin.cpp  CMakeLists.txt
src/chapter12/: 12_01_scrolling1.cpp  12_02_scrolling2.cpp  12_03_scrollsub.cpp  12_04_scroll.cpp  12_05_scrup3.cpp  12_06_scrollreg.cpp  CMakeLists.txt
src/chapter13/: 13_01_newpad1.cpp  13_02_newpad2.cpp  13_03_sonofpad.cpp  CMakeLists.txt
src/chapter14/: 14_01_mousetest.cpp  14_02_mspy.cpp  14_03_clickput.cpp  14_04_bclick.cpp  14_05_mousemovement.cpp  CMakeLists.txt
src/chapter15/: 15_01_cursset.cpp  15_02_steps.cpp  15_03_plus.cpp  15_04_dumpwin.cpp  15_05_undump.cpp  15_06_wputfile.cpp  15_07_wgetfile.cpp  CMakeLists.txt
